--- a/apps/xulf-ui/xulf-ui/src/app/global.css
+++ b/apps/xulf-ui/xulf-ui/src/app/global.css
@@ -56,3 +56,11 @@ h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+
+@layer utilities {
+  .tw-debug {
+    background-color: lime;
+    color: black;
+    padding: 1rem;
+  }
+}
