--- a/apps/morrison-developers/morrison-developers-app/app/global.css
+++ b/apps/morrison-developers/morrison-developers-app/app/global.css
@@ -7,9 +7,14 @@
   /* Define dark overrides here if needed */
 }
 
+/* ─────────── CSS DEBUG ─────────── */
+/* body * {
+  border: 1px solid red;
+} */
+ 
 /* ─────────── RESET ─────────── */
 * {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   user-select: none;
   -webkit-user-select: none; /* Safari */
 }
