--- a/apps/shavon-lloyd/shavon-lloyd/src/app/components/NavBar/NavBar.module.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/components/NavBar/NavBar.module.css
@@ -3,6 +3,11 @@
   height: 5.375rem;
   flex-shrink: 0;
 
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
   display: flex;
   flex-direction: row;
   align-items: center;
