--- a/apps/shavon-lloyd/shavon-lloyd/src/app/global-css/typography.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/global-css/typography.css
@@ -29,3 +29,13 @@
   line-height: 3rem; /* 208.696% */
   letter-spacing: 0.18688rem;
 }
+
+.li {
+  color: var(--primary-color-3, #0B121B);
+  font-family: Joan;
+  font-size: 1.375rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.1875rem; /* 159.091% */
+  letter-spacing: 0.17875rem;
+}
