--- a/apps/shavon-lloyd/shavon-lloyd/src/app/global.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/global.css
@@ -1,4 +1,4 @@
 @import './global-css/reset.css';
 @import './global-css/fonts.css';
 @import './global-css/typography.css';
-
+@import './global-css/layout.css';
