--- a/apps/shavon-lloyd/shavon-lloyd/src/app/global-css/typography.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/global-css/typography.css
@@ -5,7 +5,7 @@
   font-size: 3rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.25rem; /* 41.667% */
+  line-height: 1;
   letter-spacing: 0.39rem;
 }
 
@@ -16,7 +16,7 @@
   font-size: 2.25rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.25rem; /* 55.556% */
+  line-height: 1;
   letter-spacing: 0.2925rem;
 }
 
@@ -26,7 +26,7 @@
   font-size: 1.4375rem;
   font-style: italic;
   font-weight: 400;
-  line-height: 3rem; /* 208.696% */
+  line-height: 1.5;
   letter-spacing: 0.18688rem;
 }
 
@@ -36,6 +36,6 @@
   font-size: 1.375rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 2.1875rem; /* 159.091% */
+  line-height: 1.5;
   letter-spacing: 0.17875rem;
 }
