--- a/apps/shavon-lloyd/shavon-lloyd/src/app/components/SettingsTab/SettingsTab.module.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/components/SettingsTab/SettingsTab.module.css
@@ -3,57 +3,68 @@
 .tab {
   position: fixed;
   right: 0;
-  bottom: 10%;
+  bottom: 5%;
   transform: translateX(0);
   border: 0;
-  padding: 12px;
-  border-radius: 12px 0 0 12px;
+  padding: 0.75rem;
+  border-radius: 0.75rem 0 0 0.75rem;
   cursor: pointer;
   background: #4c6ea7;
   color: white;
   transition: transform 200ms ease;
   z-index: 50;
 }
-.tabOpen { transform: translateX(-280px); } /* moves with the panel */
+.tabOpen { transform: translateX(-12.75rem); } /* moves with the panel */
 
 .icon { font-size: 20px; line-height: 1; }
 
 .panel {
   position: fixed;
-  right: -280px;
-  bottom: 2rem;;
-  height: 20rem;
-  width: 280px;
+  right: -17.5rem;
+  bottom: 2rem;
+  /* height: 6.5625rem; */
+  /* width: 10.25rem; */
   padding: 1rem;
   background: rgba(76,110,167,0.95);
   backdrop-filter: saturate(120%) blur(4px);
   transition: right 200ms ease;
   z-index: 51;
   overflow-y: auto;
-  display: grid;
-  gap: 16px;
-  border-left: 2px solid #238bff; /* that blue accent from your mock */
-  border-radius: 12px 0 0 12px;
+  gap: 1rem;
+  border-radius: 0.75rem 0 0 0.75rem;
+  display: flex;
+  flex-direction: column;
 }
-.panelOpen { right: 0; }
+.panelOpen { 
+  right: 0; 
+}
 
-.group { display: grid; gap: 0.5rem;}
+.group { 
+  padding: .25rem .5rem .25rem .25rem;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
 .label { 
+  height: .625rem;
+  /* padding: 0 .625rem .625rem .625rem; */
   color: var(--white, #D7E2EB);
   text-align: left;
   font-family: Joan;
-  font-size: 1rem;
+  font-size: .625rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.25rem; /* 333.333% */
+  line-height: .625rem; /* 333.333% */
   letter-spacing: 0.04875rem;
+
 }
-.row { display: flex; gap: 8px; }
+/* .row { display: flex; gap: 8px; } */
 
 .input, .choice {
   all: unset;
   border: 1px solid rgba(255,255,255,0.7);
-  padding: 10px 12px;
+  /* padding: 10px 12px; */
   border-radius: 12px;
   background: transparent;
   color: white;
@@ -64,12 +75,23 @@
 
 .sr-only { position: absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
 
-.topContainer {
+.topContainer, .btmContainer {
+  height: 50%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
 
+.language {
+  display: flex;
+  flex-direction: column;
+}
 
+.langGroup {
+  width: fill;
+  /* padding: .25rem .5rem .25rem .25rem; */
+  /* background-color: yellow; */
+}
 
 /*~~~~~~~~debugging outlines~~~~~~~~*/
 /* .panel :global(*) {
