--- a/libs/ui/src/shavon-lloyd/components/SettingsTab/SettingsTab.module.css
+++ b/libs/ui/src/shavon-lloyd/components/SettingsTab/SettingsTab.module.css
@@ -3,7 +3,7 @@
 .tab {
   position: fixed;
   right: 0;
-  bottom: 5%;
+  bottom: 2.1rem;
   transform: translateX(0);
   border: 0;
   padding: 0.75rem;
@@ -14,7 +14,7 @@
   transition: transform 200ms ease;
   z-index: 50;
 }
-.tabOpen { transform: translateX(-12.75rem); } /* moves with the panel */
+.tabOpen { transform: translateX(-14.25rem); } /* moves with the panel */
 
 .icon { font-size: 20px; line-height: 1; }
 
@@ -22,7 +22,7 @@
   position: fixed;
   right: -17.5rem;
   bottom: 2rem;
-  /* height: 6.5625rem; */
+  height: 10rem;
   /* width: 10.25rem; */
   padding: 1rem;
   background: rgba(76,110,167,0.95);
@@ -48,7 +48,7 @@
 
 .label { 
   height: .625rem;
-  /* padding: 0 .625rem .625rem .625rem; */
+  padding: 0 .5rem;
   color: var(--white, #D7E2EB);
   text-align: left;
   font-family: Joan;
@@ -61,18 +61,27 @@
 }
 /* .row { display: flex; gap: 8px; } */
 
-.input, .choice {
+.input {
   all: unset;
-  border: 1px solid rgba(255,255,255,0.7);
-  /* padding: 10px 12px; */
-  border-radius: 12px;
+  border: 1px solid rgba(255,255,255);
+  padding: .25rem .75rem;
+  border-radius: .5rem;
+  background: transparent;
+  color: white;
+  cursor: pointer;
+}
+
+.choice {
+  all: unset;
+  border: 1px solid rgba(255,255,255);
+  padding: .25rem .75rem;
+  border-radius: 1rem;
   background: transparent;
   color: white;
   cursor: pointer;
 }
 .input { cursor: default; }
 .choice.active { background: rgba(255,255,255,0.15); }
-
 .sr-only { position: absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
 
 .topContainer, .btmContainer {
@@ -95,6 +104,6 @@
 
 /*~~~~~~~~debugging outlines~~~~~~~~*/
 /* .panel :global(*) {
-  outline: 1px solid red !important;
+  outline: 1px solid rgb(236, 130, 224) !important;
 } */
 /*~~~~~~~~debugging outlines~~~~~~~~*/
