--- a/libs/ui/src/shavon-lloyd/components/Body/Body.module.css
+++ b/libs/ui/src/shavon-lloyd/components/Body/Body.module.css
@@ -4,8 +4,8 @@
   align-items: center;
   justify-content: center;
   min-height: 100%;
-  width: 100vw;
+  width: 100%;
 
-  background-color: black;
-  color: orangered;
+  /* background-color: black;
+  color: orangered; */
 }
