--- a/libs/ui/src/shavon-lloyd/components/SettingsTab/SettingsTab.module.css
+++ b/libs/ui/src/shavon-lloyd/components/SettingsTab/SettingsTab.module.css
@@ -88,7 +88,7 @@
 }
 
 .langGroup {
-  width: fill;
+  width: 100%;
   /* padding: .25rem .5rem .25rem .25rem; */
   /* background-color: yellow; */
 }
