--- a/libs/ui/src/shavon-lloyd/components/SettingsTab/SettingsTab.module.css
+++ b/libs/ui/src/shavon-lloyd/components/SettingsTab/SettingsTab.module.css
@@ -1,18 +1,26 @@
 /* src/app/components/SettingsTab/SettingsTab.module.css */
 
 .tab {
-  position: fixed;
+  /* position: fixed;
   right: 0;
-  bottom: 2.1rem;
+  bottom: 2.1rem; */
   transform: translateX(0);
   border: 0;
   padding: 0.75rem;
   border-radius: 0.75rem 0 0 0.75rem;
   cursor: pointer;
-  background: #4c6ea7;
+  background: #3d58869a;
+  backdrop-filter: blur(1rem);
   color: white;
-  transition: transform 200ms ease;
   z-index: 50;
+  transition: transform 200ms ease,
+              background 300ms ease,
+              backdrop-filter 300ms ease;
+}
+
+.tab:hover {
+  background: #455d8647;
+  backdrop-filter: blur(0.5rem);
 }
 .tabOpen { transform: translateX(-14.25rem); } /* moves with the panel */
 
@@ -25,8 +33,8 @@
   height: 10rem;
   /* width: 10.25rem; */
   padding: 1rem;
-  background: rgba(76,110,167,0.95);
-  backdrop-filter: saturate(120%) blur(4px);
+  background: #3d58869a;
+  backdrop-filter: blur(1rem);
   transition: right 200ms ease;
   z-index: 51;
   overflow-y: auto;
