--- a/apps/shavon-lloyd/shavon-lloyd/src/app/global.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/global.css
@@ -2,3 +2,4 @@
 @import './global-css/fonts.css';
 @import './global-css/typography.css';
 @import './global-css/layout.css';
+@import './global-css/vars.css';
