--- a/apps/shavon-lloyd/shavon-lloyd/src/app/contact/Contact.module.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/contact/Contact.module.css
@@ -1,4 +1,18 @@
-.main {}
+.main {
+  background-color: var(--primary-accent-color, #50709A);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  max-width: 100vw;
+}
+
+.heroImg {
+  aspect-ratio: 2 / 1;
+  width: 100%;
+  max-height: 70dvh;
+}
 
 .body {
   display: flex;
