--- a/apps/shavon-lloyd/shavon-lloyd/src/app/page.module.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/page.module.css
@@ -8,6 +8,29 @@
   gap: 4rem;
 }
 
+.bioPreview {
+  height: 100dvh;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, #FFF 100%);
+}
+
+.bioPreviewWrapper {
+  position: relative;
+  z-index: 1;
+}
+
+.topStaff {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 0;
+}
+
+.btmStaff {
+  position: absolute;
+  bottom: calc(-30rem);
+  left: 0;
+  z-index: 0;
+}
 .calSection {
   display: flex;
   justify-content: space-around;
