--- a/apps/shavon-lloyd/shavon-lloyd/src/app/global-css/typography.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/global-css/typography.css
@@ -23,11 +23,14 @@
 .p {
   color: var(--primary-color-3, #0B121B);
   font-family: Inter;
-  font-size: 1.4375rem;
+  /* font-size: 1.4375rem; */
+  font-size: clamp(1rem, 4.3vw, 1.4375rem);
   font-style: italic;
   font-weight: 400;
   line-height: 1.5;
-  letter-spacing: 0.18688rem;
+  /* letter-spacing: 0.18688rem; */
+  letter-spacing: 0.03em;
+  text-wrap: pretty;
 }
 
 .li {
