add landing page mobile design

--- a/apps/shavon-lloyd/shavon-lloyd/src/app/contact/Contact.module.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/contact/Contact.module.css
@@ -55,6 +55,12 @@
   gap: 1rem;
 }
 
+@media (max-width: 768px) {
+  .formRow {
+    flex-direction: column;
+  }
+}
+
 .formInput,
 .formTextarea {
   flex: 1;
