--- a/apps/shavon-lloyd/shavon-lloyd/src/app/page.module.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/page.module.css
@@ -17,6 +17,17 @@
   background-color: var(--primary-accent-color, #50709A);
 }
 
+.contactSection {
+  background: var(--primary-accent-color);
+  max-width: 100vw;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+
+  padding: 2rem 0;
+}
+
 .leftCol {
   display: flex;
   flex-direction: column;
@@ -39,6 +50,17 @@
   width: 100%;
 }
 
+@media (max-width: 1100px) {
+  .titleSection, .worksSection, .choralSection, .instrumentalSection {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  max-width: 100vw;
+  width: 100%;
+}
+
+}
+
 .contactForm {
   display: flex;
   flex-direction: column;
@@ -57,6 +79,12 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
+}
+
+@media (max-width: 768px) {
+  .formRow {
+    flex-direction: column;
+  }
 }
 
 .formInput,
@@ -115,6 +143,10 @@
   }
   .leftCol {
     max-width: 100%;
+  }
+
+  .contactSection {
+    flex-direction: column;
   }
 }
 
