--- a/apps/shavon-lloyd/shavon-lloyd/src/app/global-css/typography.css
+++ b/apps/shavon-lloyd/shavon-lloyd/src/app/global-css/typography.css
@@ -2,7 +2,7 @@
   color: var(--primary-color-3, #0B121B);
   text-align: left;
   font-family: Joan;
-  font-size: 3rem;
+  font-size: clamp(2.5rem, 6vw, 3rem);
   font-style: normal;
   font-weight: 400;
   line-height: 1;
