--- a/libs/ui/src/shavon-lloyd/components/VideoCard/VideoCard.module.css
+++ b/libs/ui/src/shavon-lloyd/components/VideoCard/VideoCard.module.css
@@ -38,18 +38,18 @@
 .cardTitle {
   color: #000;
   font-family: Joan;
-  font-size: 2.5rem;
+  font-size: clamp(1rem, 3vw, 2.5rem);
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
   letter-spacing: 0.325rem;
-  padding: 1rem 0;
+  padding: clamp(0rem, 1vw, 1rem) 0;
 }
 
 .cardMeta {
   color: #000;
   font-family: Joan;
-  font-size: 1rem;
+  font-size: clamp(0.75rem, 2vw, 1rem);
   font-style: normal;
   font-weight: 400;
   line-height: 1.1875rem; /* 118.75% */
