--- a/libs/ui/src/shavon-lloyd/components/LandingHero/LandingHero.module.css
+++ b/libs/ui/src/shavon-lloyd/components/LandingHero/LandingHero.module.css
@@ -65,7 +65,7 @@
   justify-content: flex-end;
 
   width: 100%;
-  height: calc(100dvh - 68px);
+  height: calc(100vh - 68px);
 }
 
 .landingHero {
@@ -91,6 +91,6 @@
   position: absolute;
   width: 100%;
   left: 0;
-  height: calc(100dvh - 68px);
+  height: calc(100vh - 68px);
   z-index: 3;
 }
